# ChangeLog for dev-ml/cryptokit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ml/cvs-repo/gentoo-x86/dev-ml/cryptokit/ChangeLog,v 1.1 2007/11/10 15:40:22 aballier Exp $

*cryptokit-1.3 (10 Nov 2007)

  10 Nov 2007; Alexis Ballier <aballier@gentoo.org> +files/META,
  +files/cryptokit-gentoo.patch, +metadata.xml, +cryptokit-1.3.ebuild:
  initial import, bug #151633, thanks to people having contributed there
