@@ -10,14 +10,14 @@ MD5 4586e772a9958d3fcae942d0c9aabfc7 files/cryptokit-gentoo.patch 995
 RMD160 0005ac1c75cdc148c3c0e2dc1af5e7c25285940d files/cryptokit-gentoo.patch 995
 SHA256 fb027f66325cd1d77ff916e3b3252f9ae6d4b8bf1f1d24c05dc9c04372842666 files/cryptokit-gentoo.patch 995
 DIST cryptokit-1.3.tar.gz 112689 RMD160 bdf1ec365562b534b7995d0f2c3fc06ec203111f SHA1 aebb0b2ed7c89320006de63b73ab639051888a9c SHA256 9ef339ed4cb15f0c458d0093b90dd249d8d1dfb1b01a1fedc542e67f67a7194f
-EBUILD cryptokit-1.3.ebuild 1554 RMD160 1b990dc52db014d65803f82b2d09aad34dc7cc87 SHA1 19204976f55542ff5ce669cc77bea7876d0500c0 SHA256 95f54bc14cb7edeef24b2d207caaf3085ac90af4e777c3785d0757566a484c46
-MD5 67f6870ea2c1082ab554a49f21ce621a cryptokit-1.3.ebuild 1554
-RMD160 1b990dc52db014d65803f82b2d09aad34dc7cc87 cryptokit-1.3.ebuild 1554
-SHA256 95f54bc14cb7edeef24b2d207caaf3085ac90af4e777c3785d0757566a484c46 cryptokit-1.3.ebuild 1554
-MISC ChangeLog 447 RMD160 dacd514529fa1f1d4355350150e7f68b51923a6f SHA1 1258afb0bbc8b4a08c4cb93e0a02a6ae5b6b5e41 SHA256 e92ef5f1efe9f33f7d2d7d574a86e6d52a2a06831a206dba05fad1432fdc61bd
-MD5 06d1fbbab0ef3e3331ae36e69972885d ChangeLog 447
-RMD160 dacd514529fa1f1d4355350150e7f68b51923a6f ChangeLog 447
-SHA256 e92ef5f1efe9f33f7d2d7d574a86e6d52a2a06831a206dba05fad1432fdc61bd ChangeLog 447
+EBUILD cryptokit-1.3.ebuild 1963 RMD160 9080e829c84e37076d262ac9df9437814332e836 SHA1 49697ad6d280e4fe981f2a800079caefd86e03b4 SHA256 875c6fb221be961d6daf2c08353095182f5834dada283fbdb4ab6280396cf357
+MD5 44f026ab65f1ddabbd0a08a194f36904 cryptokit-1.3.ebuild 1963
+RMD160 9080e829c84e37076d262ac9df9437814332e836 cryptokit-1.3.ebuild 1963
+SHA256 875c6fb221be961d6daf2c08353095182f5834dada283fbdb4ab6280396cf357 cryptokit-1.3.ebuild 1963
+MISC ChangeLog 563 RMD160 c15e97ed3fb0e39035e1f75bf377877f9c4763cd SHA1 288f0181ae7b3f2f5181e51c18278613f93b5edf SHA256 142e1520dea1544f576f1043a0cd8e9d9283bffa0c7a140034fa2718300b7a45
+MD5 4a6ead5cd5a649d6119a3764666dc97b ChangeLog 563
+RMD160 c15e97ed3fb0e39035e1f75bf377877f9c4763cd ChangeLog 563
+SHA256 142e1520dea1544f576f1043a0cd8e9d9283bffa0c7a140034fa2718300b7a45 ChangeLog 563
 MISC metadata.xml 155 RMD160 dfaa057e679b01302a807c75a32a910098b26809 SHA1 94024f83dcacbb53e92be090dd0f994ec93dc90d SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81
 MD5 8b350f19c06fcabf1053b0421b7c3f5a metadata.xml 155
 RMD160 dfaa057e679b01302a807c75a32a910098b26809 metadata.xml 155
@@ -26,9 +26,9 @@ MD5 af0890ce14737d4c2395aad188ee6981 files/digest-cryptokit-1.3 241
 RMD160 e623ef8e9945f08bef187ecb5880e37810bfab51 files/digest-cryptokit-1.3 241
 SHA256 9f3f1096d7ef4fb42e73ba3b1c6dca9a3e9cfcd2bb6da87dd356a587fcaa8b4d files/digest-cryptokit-1.3 241
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.8 (GNU/Linux)
 
-iD8DBQFHNdF2vFcC4BYPU0oRAnyXAJ4uE5+WkLGNB4qLy2miF5tKCrb0GwCffu3+
-/CWgLduR0xuq+9RgCfv0MEA=
-=2QCC
+iEYEARECAAYFAkd77wYACgkQvFcC4BYPU0qwzQCeJXKikh4rnzSSQWoTucySC4V9
+nFgAni8gBL6HYrcAfyZb5s8sfFyKssmU
+=KLu7
 -----END PGP SIGNATURE-----
