@@ -1,6 +1,9 @@
 # ChangeLog for dev-ml/cryptokit
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ml/cvs-repo/gentoo-x86/dev-ml/cryptokit/ChangeLog,v 1.1 2007/11/10 15:40:22 aballier Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ml/cvs-repo/gentoo-x86/dev-ml/cryptokit/ChangeLog,v 1.2 2008/01/02 20:07:27 aballier Exp $
+
+  02 Jan 2008; Alexis Ballier <aballier@gentoo.org> cryptokit-1.3.ebuild:
+  Add support to not build with ocamlopt
 
 *cryptokit-1.3 (10 Nov 2007)
 
